2009-08-28  Ingo Renner  <ingo@typo3.org>

	* Added feature #11784: Change existing messages in the Template Object Browser top use flash messages
	* Added feature #11783: Change existing warning boxes to use flash messages

2009-08-28  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11710: Remove local loopback bypass in Install Tool Login (thanks to Mario Rimann)

2009-08-27  Steffen Kamper  <info@sk-typo3.de>

	* Follow-up to #11651: Allow Extbase as framework for backend modules
	* Fixed bug #11803: sysext opendocs is shy (thanks to Steffen Gebert)
	* Follow-up to #11652: Modern integration of module into backend using Extbase - general approach without naming of Extbase
	* Fixed bug #11511: Resources -> Files missing in doktype Sysfolder (thanks to Steffen Gebert)

2009-08-27  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11799: Use typo3printError() if backend is locked (thanks to Steffen Gebert)

2009-08-27  Ingo Renner  <ingo@typo3.org>

	* Follow-up to #11684: Fixed styling of links and lists in flash messages
	* Follow-up to #11684: Minor comments cleanup, switched popFlashMessages() to public to enable access from ExtJs f.e.

2009-08-26  Michael Stucki  <michael@typo3.org>

	* Fixed bug #11731: ENABLE_INSTALL_TOOL file check in yellow box does not check the file age (thanks to Moreno Feltscher)

2009-08-26  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11786: Wrong order of arguments for typo3PrintError() (thanks to Steffen Gebert)

2009-08-25  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11212: Turning off the admin-panel results in error
	* Follow-up 2 to #11764: fixed bug that occured when localizing records via tceforms

2009-08-25  Oliver Hader  <oliver@typo3.org>

	* Added feature #11707: Integrate possibility to enable/disable the deprecation logging (thanks to Sascha Kettler)
	* Fixed bug #11657: Extension sys_action uses hardcoded labels (thanks to Christopher Stelmaszyk)